@@ -1,3 +1,8 @@
+2003-07-31  Bernhard Held <bernhard@bernhardheld.de>
+
+	* src/SDCCicode.c (operandOperation): 3. fix, this time for Alpha; ULONG has 64 bits
+	there, while the mantissa of a double is "only" 53 bits wide.
+
 2003-07-30  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>
 
 	Adding sdcclib to the build.  MSVC project coming soon.
